# RustLog

./: README.md
rustlog/: Cargo.toml
rustlog/src/: args.rs  filter.rs  lib.rs  main.rs  reader.rs  reader_async.rs
rustlog/tests/: cli_tests.rs  filter_tests.rs  tail_async.rs  tail_tests.rs
