[package]
name = "rustlog"
version = "0.1.0"
edition = "2025"

[dependencies]
tokio = { version = "1", features = ["full"] }
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
env_logger = "0.10"
log = "0.4"
ctrlc = "3.4"


[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
