[package]
name = "rustlog"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
env_logger = "0.10"
log = "0.4"
ctrlc = "3.4"
colored = "2"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "fmt"] }
tracing-log = "0.2.0"
tracing-appender = "0.2.3"
tracing-serde = "0.2.0"
serde = { version = "1.0.219", features = ["derive"] }
tempfile = "3"


[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
